# Campus-Real-time-Exploration-and-Interactive-Community

./: .gitignore  DEPLOYMENT.md  FEATURES_AND_TESTS.md  README.md  TEST_REPORT.md  start_server.py  test_login.py  test_websocket.html  test_websocket.py
backend/: .env.example  .gitignore  manage.py  pyproject.toml  start_production.sh  test_full_api.py  test_ws.py  test_ws_simple.py  test_ws_sync.py
backend/chat/: admin.py  apps.py  auth.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  tests.py  views.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/content/: admin.py  models.py  serializers.py  urls.py  views.py
backend/feed/: apps.py  tests.py  urls.py  views.py
backend/forum/: models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/learning/: models.py  serializers.py  tests.py  views.py
backend/schools/: admin.py  apps.py  models.py  recommendation.py  serializers.py  signals.py  stats.py  tests.py  tests_extended.py  urls.py  views.py
backend/scripts/: api_smoke_test.py  cleanup_fake_activities.py  clear_chat_history.py  create_data.py  create_users.py  create_users_and_posts.py  setup_cron_job.py
backend/search/: urls.py  views.py
backend/users/: activities_views.py  admin.py  apps.py  email.py  favorites.py  favorites_serializers.py  favorites_views.py  friendship.py  friendship_serializers.py  friendship_views.py  messages.py  messages_views.py  models.py  notifications_serializers.py  notifications_views.py  permissions.py  serializers.py  signals.py  tests.py  throttles.py  urls.py  (+3 more)
(+319 files in other folders)
