[project]
name = "campus-community-backend"
version = "0.1.0"
description = "校园实时互动社区后端服务"
requires-python = "==3.12.*"
dependencies = [
    "django>=6.0,<6.1",
    "djangorestframework>=3.16,<3.17",
    "djangorestframework-simplejwt>=5.5,<5.6",
    "django-cors-headers>=4.9,<4.10",
    "channels>=4.3,<4.4",
    "channels-redis>=4.2,<4.3",
    "websockets>=14.0,<16.0",
    "python-dotenv>=1.0,<2",
    "pymysql>=1.2,<1.3",
    "pillow>=12.0,<13",
    "aliyun-python-sdk-core>=2.16,<2.17",
    "uvicorn>=0.42,<0.43",
]

[project.optional-dependencies]
dev = [
    "faker>=25.0,<26",
]
prod = [
    "gunicorn>=25.0,<26",
    "daphne>=4.2,<4.3",
    "uvicorn[standard]>=0.42,<0.43",
]

